// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render properly with flat tab variant 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c8 {
  color: #ffffff;
  border-radius: 2.5rem;
  margin-left: 0.8rem;
  line-height: 1.2rem;
  padding: 0.2rem 0.5rem;
  font-size: 1.1rem;
}

.c6 {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  padding: 1.6rem;
  user-select: none;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  flex: initial;
  border-color: #b0bcc8;
  border-width: 0 0 0.1rem 0;
  transition: all 100ms ease-out;
  background-color: #EBF1FA;
  background-color: #ffffff;
  background-color: transparent;
}

.c1 * {
  transition: all 100ms ease-out;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c1:disabled::after {
  background-color: transparent;
}

.c1:disabled .c5 {
  color: #b0bcc8;
}

.c1:disabled .c7 {
  background-color: #b0bcc8;
}

.c1:not(:disabled):hover {
  cursor: pointer;
}

.c1 .c5 {
  color: #3872D2;
}

.c1 .c7 {
  background-color: #3872D2;
}

.c1:first-child {
  border-top-left-radius: 0.8rem;
}

.c1:last-child {
  border-top-right-radius: 0.8rem;
}

.c1::after {
  content: '';
  position: absolute;
  display: block;
  height: 0.4rem;
  bottom: -0.1rem;
  left: 0;
  width: 100%;
  background-color: #3872D2;
  border-radius: 0.5rem 0.5rem 0 0;
}

.c1:disabled {
  background-color: transparent;
}

.c9 {
  padding: 1.6rem;
  user-select: none;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  flex: initial;
  border-color: #b0bcc8;
  border-width: 0 0 0.1rem 0;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  background-color: transparent;
}

.c9 * {
  transition: all 100ms ease-out;
}

.c9:focus {
  outline: none;
}

.c9:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c9:disabled::after {
  background-color: transparent;
}

.c9:disabled .c5 {
  color: #b0bcc8;
}

.c9:disabled .c7 {
  background-color: #b0bcc8;
}

.c9:not(:disabled):hover {
  cursor: pointer;
}

.c9 .c5 {
  color: #607890;
}

.c9 .c7 {
  background-color: #607890;
}

.c9:not(:disabled):hover {
  background-color: #F7F8F9;
  background-color: #F7F8F9;
}

.c9:not(:disabled):hover .c5 {
  color: #435465;
}

.c9:not(:disabled):hover .c7 {
  background-color: #435465;
}

.c9:first-child {
  border-top-left-radius: 0.8rem;
}

.c9:last-child {
  border-top-right-radius: 0.8rem;
}

.c9::after {
  content: '';
  position: absolute;
  display: block;
  height: 0.4rem;
  bottom: -0.1rem;
  left: 0;
  width: 100%;
  background-color: transparent;
  border-radius: 0.5rem 0.5rem 0 0;
}

.c9:disabled {
  background-color: transparent;
}

.c2 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  justify-content: flex-start;
  overflow-x: auto;
  background-color: transparent;
}

.c10 {
  padding: 1rem;
  height: 100%;
  width: 100%;
  display: block;
}

.c10:focus {
  outline: none;
}

@media (max-width: 767px) {
  .c1 {
    flex: 1;
  }
}

@media (max-width: 767px) {
  .c9 {
    flex: 1;
  }
}

<div>
  <div
    class=""
    id="medly-tabs"
  >
    <div
      class="c0"
      id="medly-tabs-list"
      tabsize="S"
      variant="flat"
    >
      <button
        aria-controls="panel-tab1"
        aria-selected="true"
        class="c1"
        id="tab1"
        role="tab"
        tabbackground="WHITE"
        tabindex="0"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="flat"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5 c6"
              id="tab1-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Add
            </span>
            <span
              class="c7 c8"
              id="tab1-label"
              tabsize="S"
            >
              30
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="panel-tab2"
        aria-selected="false"
        class="c9"
        id="tab2"
        role="tab"
        tabbackground="WHITE"
        tabindex="-1"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="flat"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5 c6"
              id="tab2-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Edit
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="panel-tab4"
        aria-selected="false"
        class="c9"
        disabled=""
        id="tab4"
        role="tab"
        tabbackground="WHITE"
        tabindex="-1"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="flat"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5 c6"
              id="tab4-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Disabled
            </span>
          </div>
        </div>
      </button>
    </div>
    <div
      aria-labelledby="tab1"
      class="c10"
      id="medly-tabs-panel-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Content for the add panel
    </div>
  </div>
</div>
`;

exports[`Tabs should render properly with fullWidth 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  padding: 1.6rem;
  user-select: none;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  flex: 1;
  border-color: #b0bcc8;
  border-width: 0 0 0.1rem 0;
  transition: all 100ms ease-out;
  background-color: #EBF1FA;
  background-color: #ffffff;
  background-color: transparent;
}

.c1 * {
  transition: all 100ms ease-out;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c1:disabled::after {
  background-color: transparent;
}

.c1:disabled .c5 {
  color: #b0bcc8;
}

.c1:not(:disabled):hover {
  cursor: pointer;
}

.c1 .c5 {
  color: #3872D2;
}

.c1:first-child {
  border-top-left-radius: 0.8rem;
}

.c1:last-child {
  border-top-right-radius: 0.8rem;
}

.c1::after {
  content: '';
  position: absolute;
  display: block;
  height: 0.4rem;
  bottom: -0.1rem;
  left: 0;
  width: 100%;
  background-color: #3872D2;
  border-radius: 0.5rem 0.5rem 0 0;
}

.c1:disabled {
  background-color: transparent;
}

.c2 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  justify-content: flex-start;
  overflow-x: auto;
  background-color: transparent;
}

.c7 {
  padding: 1rem;
  height: 100%;
  width: 100%;
  display: block;
}

.c7:focus {
  outline: none;
}

@media (max-width: 767px) {
  .c1 {
    flex: 1;
  }
}

<div>
  <div
    class=""
    id="medly-tabs"
  >
    <div
      class="c0"
      id="medly-tabs-list"
      tabsize="S"
      variant="flat"
    >
      <button
        aria-controls="panel-tab2"
        aria-selected="true"
        class="c1"
        id="tab2"
        role="tab"
        tabbackground="WHITE"
        tabindex="0"
        tabsize="S"
        totaltabs="2"
        type="button"
        variant="flat"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5 c6"
              id="tab2-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Delete
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="panel-tab2"
        aria-selected="true"
        class="c1"
        id="tab2"
        role="tab"
        tabbackground="WHITE"
        tabindex="0"
        tabsize="S"
        totaltabs="2"
        type="button"
        variant="flat"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5 c6"
              id="tab2-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Delete
            </span>
          </div>
        </div>
      </button>
    </div>
    <div
      aria-labelledby="tab2"
      class="c7"
      id="medly-tabs-panel-tab2"
      role="tabpanel"
      tabindex="0"
    >
      Content for the delete panel
    </div>
    <div
      aria-labelledby="tab2"
      class="c7"
      id="medly-tabs-panel-tab2"
      role="tabpanel"
      tabindex="0"
    >
      Content for the delete panel
    </div>
  </div>
</div>
`;

exports[`Tabs should render properly with outlined tab variant 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c8 {
  color: #ffffff;
  border-radius: 2.5rem;
  margin-left: 0.8rem;
  line-height: 1.2rem;
  padding: 0.2rem 0.5rem;
  font-size: 1.1rem;
}

.c6 {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1 {
  padding: 1.6rem;
  user-select: none;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  flex: initial;
  border-color: #C7D0D8;
  border-width: 0.1rem 0.1rem 0.1rem 0;
  transition: all 100ms ease-out;
  background-color: #EBF1FA;
  background-color: #EBF1FA;
}

.c1 * {
  transition: all 100ms ease-out;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c1:disabled::after {
  background-color: transparent;
}

.c1:disabled .c5 {
  color: #b0bcc8;
}

.c1:disabled .c7 {
  background-color: #b0bcc8;
}

.c1:not(:disabled):hover {
  cursor: pointer;
}

.c1 .c5 {
  color: #3872D2;
}

.c1 .c7 {
  background-color: #3872D2;
}

.c1:first-child {
  border-left-width: 0.1rem;
  border-top-left-radius: 0.8rem;
}

.c1:last-child {
  border-top-right-radius: 0.8rem;
}

.c1::after {
  content: '';
  position: absolute;
  display: block;
  height: 0.4rem;
  bottom: -0.1rem;
  left: -0.1rem;
  width: calc(100% + 0.2rem);
  background-color: #3872D2;
}

.c9 {
  padding: 1.6rem;
  user-select: none;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  flex: initial;
  border-color: #C7D0D8;
  border-width: 0.1rem 0.1rem 0.1rem 0;
  transition: all 100ms ease-out;
  background-color: #ffffff;
}

.c9 * {
  transition: all 100ms ease-out;
}

.c9:focus {
  outline: none;
}

.c9:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c9:disabled::after {
  background-color: transparent;
}

.c9:disabled .c5 {
  color: #b0bcc8;
}

.c9:disabled .c7 {
  background-color: #b0bcc8;
}

.c9:not(:disabled):hover {
  cursor: pointer;
}

.c9 .c5 {
  color: #607890;
}

.c9 .c7 {
  background-color: #607890;
}

.c9:not(:disabled):hover {
  background-color: #F7F8F9;
  background-color: #F7F8F9;
}

.c9:not(:disabled):hover .c5 {
  color: #435465;
}

.c9:not(:disabled):hover .c7 {
  background-color: #435465;
}

.c9:first-child {
  border-left-width: 0.1rem;
  border-top-left-radius: 0.8rem;
}

.c9:last-child {
  border-top-right-radius: 0.8rem;
}

.c9::after {
  content: '';
  position: absolute;
  display: block;
  height: 0.4rem;
  bottom: -0.1rem;
  left: -0.1rem;
  width: calc(100% + 0.2rem);
  background-color: transparent;
}

.c2 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  justify-content: flex-start;
  overflow-x: auto;
  background-color: transparent;
}

.c10 {
  padding: 1rem;
  height: 100%;
  width: 100%;
  display: block;
}

.c10:focus {
  outline: none;
}

@media (max-width: 767px) {
  .c1 {
    flex: 1;
  }
}

@media (max-width: 767px) {
  .c9 {
    flex: 1;
  }
}

<div>
  <div
    class=""
    id="medly-tabs"
  >
    <div
      class="c0"
      id="medly-tabs-list"
      tabsize="S"
      variant="outlined"
    >
      <button
        aria-controls="panel-tab1"
        aria-selected="true"
        class="c1"
        id="tab1"
        role="tab"
        tabbackground="WHITE"
        tabindex="0"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="outlined"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5 c6"
              id="tab1-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Add
            </span>
            <span
              class="c7 c8"
              id="tab1-label"
              tabsize="S"
            >
              30
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="panel-tab2"
        aria-selected="false"
        class="c9"
        id="tab2"
        role="tab"
        tabbackground="WHITE"
        tabindex="-1"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="outlined"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5 c6"
              id="tab2-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Edit
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="panel-tab4"
        aria-selected="false"
        class="c9"
        disabled=""
        id="tab4"
        role="tab"
        tabbackground="WHITE"
        tabindex="-1"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="outlined"
      >
        <div
          class="c2"
        >
          <div
            class="c3"
          >
            <span
              class="c4 c5 c6"
              id="tab4-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Disabled
            </span>
          </div>
        </div>
      </button>
    </div>
    <div
      aria-labelledby="tab1"
      class="c10"
      id="medly-tabs-panel-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Content for the add panel
    </div>
  </div>
</div>
`;

exports[`Tabs should render properly with solid tab variant 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c9 {
  color: #ffffff;
  border-radius: 2.5rem;
  margin-left: 0.8rem;
  line-height: 1.2rem;
  padding: 0.2rem 0.5rem;
  font-size: 1.1rem;
}

.c7 {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c11 {
  font-size: 1.2rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 1.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  color: #b0bcc8;
  text-align: center;
}

.c2 {
  padding: 1.6rem;
  user-select: none;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  border-width: 0 0 0.1rem 0;
  transition: all 100ms ease-out;
  background-color: #EBF1FA;
  background-color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  width: calc(25% - calc(3 * .4rem / 4));
  border: none;
  background-color: transparent;
  padding: 0.8rem 0;
  border-radius: .8rem;
}

.c2 * {
  transition: all 100ms ease-out;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c2:disabled::after {
  background-color: transparent;
}

.c2:disabled .c6 {
  color: #b0bcc8;
  line-height: 1.6rem;
}

.c2:disabled .c8 {
  background-color: #b0bcc8;
}

.c2:not(:disabled):hover {
  cursor: pointer;
}

.c2 .c6 {
  color: #3872D2;
}

.c2 .c8 {
  background-color: #3872D2;
}

.c10 {
  padding: 1.6rem;
  user-select: none;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-flow: row wrap;
  position: relative;
  border-style: solid;
  box-sizing: border-box;
  font-family: inherit;
  border-width: 0 0 0.1rem 0;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  width: calc(25% - calc(3 * .4rem / 4));
  border: none;
  background-color: transparent;
  padding: 0.8rem 0;
  border-radius: .8rem;
}

.c10 * {
  transition: all 100ms ease-out;
}

.c10:focus {
  outline: none;
}

.c10:disabled {
  cursor: not-allowed;
  background-color: #ffffff;
}

.c10:disabled::after {
  background-color: transparent;
}

.c10:disabled .c6 {
  color: #b0bcc8;
  line-height: 1.6rem;
}

.c10:disabled .c8 {
  background-color: #b0bcc8;
}

.c10:not(:disabled):hover {
  cursor: pointer;
}

.c10 .c6 {
  color: #607890;
}

.c10 .c8 {
  background-color: #607890;
}

.c10:not(:disabled):hover {
  background-color: #F7F8F9;
  background-color: #F7F8F9;
}

.c10:not(:disabled):hover .c6 {
  color: #435465;
}

.c10:not(:disabled):hover .c8 {
  background-color: #435465;
}

.c3 {
  display: flex;
  flex-direction: column;
}

.c4 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c0 {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  justify-content: flex-start;
  overflow-x: auto;
  background-color: transparent;
  justify-content: space-between;
  align-items: stretch;
  padding: .4rem;
  box-sizing: border-box;
  border-radius: 1.2rem;
  position: relative;
  color: red;
  background-color: #dfe4e9;
}

.c1 {
  background-color: #EBF1FA;
  width: calc(25% - calc(.4rem + .4rem / 4));
  height: calc(100% - calc(.4rem * 2));
  position: absolute;
  border-radius: .8rem;
  box-shadow: 0 0.1rem 0.4rem rgba(96,120,144,0.1);
  transition: transform 0.3s ease-out;
  transform-box: content-box;
  box-sizing: border-box;
  transform: translateX(calc(0% + calc(0 * .4rem)));
}

.c12 {
  padding: 1rem;
  height: 100%;
  width: 100%;
  display: block;
}

.c12:focus {
  outline: none;
}

<div>
  <div
    class=""
    id="medly-tabs"
  >
    <div
      class="c0"
      id="medly-tabs-list"
      tabsize="S"
      variant="solid"
    >
      <div
        active="0"
        class="c1"
        tabsize="S"
        totaltabs="4"
      />
      <button
        aria-controls="panel-tab1"
        aria-selected="true"
        class="c2"
        id="tab1"
        role="tab"
        tabbackground="WHITE"
        tabindex="0"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="solid"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5 c6 c7"
              id="tab1-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Add
            </span>
            <span
              class="c8 c9"
              id="tab1-label"
              tabsize="S"
            >
              30
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="panel-tab2"
        aria-selected="false"
        class="c10"
        id="tab2"
        role="tab"
        tabbackground="WHITE"
        tabindex="-1"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="solid"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5 c6 c7"
              id="tab2-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Edit
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="panel-tab2"
        aria-selected="false"
        class="c10"
        id="tab2"
        role="tab"
        tabbackground="WHITE"
        tabindex="-1"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="solid"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5 c6 c7"
              id="tab2-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Delete
            </span>
          </div>
        </div>
      </button>
      <button
        aria-controls="panel-tab4"
        aria-selected="false"
        class="c10"
        disabled=""
        id="tab4"
        role="tab"
        tabbackground="WHITE"
        tabindex="-1"
        tabsize="S"
        totaltabs="4"
        type="button"
        variant="solid"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5 c6 c7"
              id="tab4-label"
              tabsize="S"
              textalign="initial"
              textcolor="inherit"
            >
              Disabled
            </span>
          </div>
          <span
            class="c5 c11"
            id="tab4-disabledLabel"
            tabsize="S"
            textalign="initial"
            textcolor="inherit"
          />
        </div>
      </button>
    </div>
    <div
      aria-labelledby="tab1"
      class="c12"
      id="medly-tabs-panel-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Content for the add panel
    </div>
  </div>
</div>
`;
